--- a/message-api.yml
+++ b/message-api.yml
@@ -17,4 +17,8 @@ management:
   info:
     env:
       enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8760/eureka/
 message: This message is from default configuration
